# cargo-prebuilt

./: .gitattributes  .gitignore  .typos.toml  CHANGELOG.md  CONFIG.md  Cargo.toml  Cross.toml  EVENTS.md  LICENSE  README.md  build.rs  deny.toml  justfile  rustfmt.toml
.cargo/: config.toml
.github/: dependabot.yml  renovate.json
.github/linters/: .markdownlint.yml
.github/workflows/: build.yml  checks.yml  lint.yml  markdown-checks.yml  release.yml  renovate.yml  scripts-test.yml
docs/: BUILD.md  CONFIG.md  DOWNLOAD.md  EVENTS.md  INDEX_STANDARDS.md  PATHS.md  REPORT_TYPES.md  SUPPORTED.md
keys/: cargo-prebuilt-index.pub  cargo-prebuilt-index.pub.base64  cargo-prebuilt.pub  cargo-prebuilt.pub.base64
scripts/: entrypoint-test-xwin.sh  entrypoint-test-zig.sh  install-cargo-prebuilt-index.sh  install-cargo-prebuilt.sh  install-freebsd.sh
scripts/docker/: test-entrypoint.sh
src/: args.rs  color.rs  coloring.rs  conf_file.rs  config.rs  events.rs  get.rs  main.rs  test.rs
src/data/: config.rs  hashes.rs  hashes_data.rs  info.rs  info_data.rs  mod.rs
src/interact/: github_private.rs  github_public.rs  mod.rs
test/: config_1.toml  config_2.toml  hashes_1.json  hashes_2.json  info_1.json  info_2.json  pubdata.pub  pubdata.test  pubdata.test.minisig  pubdata.test.sig  pubkey.asc
