[package]
name = "cargo-prebuilt"
version = "0.8.0-dev.0"
edition = "2021"
authors = ["harmless-tech"]
description = "Download prebuilt crate binaries for many different platforms"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/cargo-prebuilt/cargo-prebuilt"
repository = "https://github.com/cargo-prebuilt/cargo-prebuilt"
categories = ["development-tools", "development-tools::cargo-plugins"]
keywords = ["cargo", "cargo-subcommand", "binary"]
rust-version = "1.71.1"
include = [
  "keys/",
  "src/",
  "build.rs",
  "Cargo.lock",
  "Cargo.toml",
  "LICENSE",
  "README.md",
]

[dependencies]
anyhow = "1.0.93"
basic-toml = "0.1.9"
bpaf = { version = "0.9.15", features = ["autocomplete", "bright-color", "derive"] }
bpaf_derive = "0.5.13"
const-hex = "1.14.0"
directories = "5.0.1"
dunce = "1.0.5"
flate2 = "1.0.35"
home = "0.5.9"
indexmap = { version = "2.6.0", features = ["serde"] }
mimalloc = { version = "0.1.43", optional = true }
minisign-verify = "0.2.2"
owo-colors = { version = "4.1.0", features = ["supports-colors"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sha2 = "0.10.8"
sha3 = "0.10.8"
tar = "0.4.43"
ureq = { version = "3.0.0-rc3", default-features = false, features = ["gzip"] }

[features]
default = ["default-rustls"]
default-native = ["native", "default-no-tls"]
default-rustls = ["rustls", "default-no-tls"]
default-no-tls = ["indexes"]

# Indexes to allow
indexes = ["github-public", "github-private"]
github-public = []
github-private = [] # Considered beta
#gitlab-public = [] #TODO: Under dev
#gitlab-private = [] #TODO: Under dev
#forgejo-public = [] #TODO: Under dev
#forgejo-private = [] #TODO: Under dev
#gitea-public = ["forgejo-public"] #TODO: Under dev
#gitea-private = ["forgejo-private"] #TODO: Under dev
#custom-http-public = [] #TODO: Under dev
#custom-http-private = [] #TODO: Under dev

# Use rustls for tls
rustls = ["ureq/rustls"]

# Use native for tls
native = ["ureq/native-tls"]
vendored-openssl = ["native", "ureq/vendored"]

# Allow downloading of compressed files with brotli
dl-cp-brotli = ["ureq/brotli"]

# Use mimalloc for the allocator
mimalloc = ["dep:mimalloc"]

[profile.dev]
panic = "abort"

[profile.test]
panic = "abort"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = false
strip = true
panic = "abort"

[profile.small]
inherits = "release"
opt-level = "s"

[profile.quick-build]
inherits = "release"
opt-level = 1
lto = false
codegen-units = 16

[profile.bloat]
inherits = "release"
debug = true
strip = false

[lints.clippy]
cargo = "deny"
correctness = "deny"
complexity = "deny"
nursery = "deny"
pedantic = "deny"
perf = "deny"
style = "deny"
suspicious = "deny"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ target }.tar.gz"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/{ target }.zip"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "zip"

[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/{ target }.zip"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "zip"
